README.md edits

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: '3'
 services:
     mysql:
         image: mysql:5.7
+        volumes: 
+          - ./db:/docker-entrypoint-initdb.d
         restart: always
         environment:
             MYSQL_ROOT_PASSWORD: wordpress
@@ -13,6 +15,8 @@ services:
         image: wordpress
         depends_on:
             - mysql
+        volumes:
+            - ./:/var/www/html
         links:
             - mysql:mysql
         ports:
